Fixed button overlap issue

--- a/frontend-spa/docs/CSS/Layout.css
+++ b/frontend-spa/docs/CSS/Layout.css
@@ -59,12 +59,20 @@ nav a{
     border: grey;
     border-style: solid;
     border-radius: 8px;
-
-    position: absolute;
-    left:5em;
-    padding:1em 2.5em;
-
 }
+
+.button1{
+    position: absolute;
+    left: 15em;
+    padding:1em 2.5em;
+}
+
+.button2{
+    position: absolute;
+    left: 5em;
+    padding:1em 2.5em;
+}
+
 nav a:hover{
     background: yellow;
     color: black;
@@ -78,6 +86,8 @@ nav a:hover{
 .header-container{
     display:inline-block;
     position:relative;
+    text-align: center;
+    
 }
 /* .header-container a{
     position: absolute;
